Implementing Edit Authors

--- a/Bookstore.Data/Bookstore.Data.csproj
+++ b/Bookstore.Data/Bookstore.Data.csproj
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Bookstore.Core\Bookstore.Core.csproj" />
+    <ProjectReference Include="..\Bookstore.Domain\Bookstore.Domain.csproj" />
   </ItemGroup>
 
 </Project>
